Added ratchet setup to CSOP code

--- a/client/main.less
+++ b/client/main.less
@@ -435,3 +435,46 @@
     }
   }
 }
+
+.see-message {
+
+  text-align: center;
+  font-size: large;
+
+  .messageContent {
+    width: 60%;
+    margin: auto;
+
+    .messageText {
+      margin: 2rem 0rem;
+      font-weight: bold; 
+    }
+  }
+}
+
+.nullContainer {
+  width: 100%;
+}
+
+.pass-message {
+  width: 100%;
+  text-align: center;
+
+  .instruction-message {
+    font-size: large;
+    margin-bottom: 2rem;
+  }
+
+  button {
+    margin-top: 1rem;
+    font-size: large;
+  }
+
+  textarea {
+    resize: none;
+    min-height: 100px;
+    min-width: 300px;
+  }
+
+}
+
