made messages display while solving the task and added multiple rounds

--- a/client/main.less
+++ b/client/main.less
@@ -437,7 +437,7 @@
 }
 
 .see-message {
-
+  width: 100%;
   text-align: center;
   font-size: large;
 
@@ -478,3 +478,6 @@
 
 }
 
+.taskMessage {
+  font-size: large;
+}
