a few bug fixes

--- a/client/main.less
+++ b/client/main.less
@@ -392,29 +392,12 @@
   .bold {
     font-weight: bold;
   }
-  .form-line {
-    display: flex;
 
-    .bp3-form-group {
-      margin-right: 30px;
+  textarea {
+    min-height: 50px;
+    min-width: 400px;
+  }  
 
-      textarea {
-        min-height: 90px;
-      }
-    }
-
-    &.thirds {
-      .bp3-form-group {
-        flex-grow: 0;
-        flex-shrink: 0;
-        flex-basis: 30%;
-
-        .bp3-label {
-          min-height: 36px;
-        }
-      }
-    }
-  }
 }
 
 .timer {
