fixed disappearing pop-up issue

--- a/client/main.less
+++ b/client/main.less
@@ -464,3 +464,8 @@
 .taskMessage {
   font-size: large;
 }
+
+.bp3-toast-container.bp3-toast-container-top {
+  position: fixed;
+  font-size: medium;
+}
