added green bar to the timer and updated the puzzles to be selected based on hill-climbability

--- a/client/main.less
+++ b/client/main.less
@@ -469,3 +469,16 @@
   position: fixed;
   font-size: medium;
 }
+
+.progress-bar-outline {
+  
+  width: 110%;
+  height: 20px;
+  border-style: solid;
+  background-color: white;
+
+  .progress-bar {
+    background-color: green;
+    height: 100%;
+  }
+}
